<?xml version="1.0"?>

    <resources>

    <string name="app_name">"EnergyLauncherDEBUG"</string>

    <string name="dummy_button">"Dummy Button"</string>

    <string name="dummy_content">"DUMMY\nCONTENT"</string>

    <string name="activity_not_found">"Activity not found"</string>

    <string name="drawer_open">"Open"</string>

    <string name="drawer_close">"Close"</string>

    <!--Shortcut-->


    <string name="default_example_string">"Hello"</string>

    <string name="back">"Back"</string>

    <string name="busca_imagen">"Select picture"</string>

    <string name="cancel">"Cancel"</string>

    <string name="guarda_button">"Save"</string>

    <string name="reordena_button">"Move app icons"</string>

    <string name="bookmark_duplicado">"Duplicate bookmark"</string>

    <string name="titulo_vacio">"Empty title"</string>

    <string name="url_vacia">"Empty URL"</string>

    <!-- Clock -->


    <string name="clock_default_time">"00:00am"</string>

    <string name="clock_wifi_icon_description">"Wi-Fi"</string>

    <string name="clock_ethernet_icon_description">"Ethernet"</string>

    <string name="clock_default_date">"Thursday, 15 March 2014"</string>

    <!-- Settings Panel -->


    <string name="settings_panel_title">"Settings"</string>

    <string name="floating_settings_icon_description">"Settings Icon"</string>

    <string name="system_settings_label">"Settings"</string>

    <string name="launcher_settings_label">"Launcher Settings"</string>

    <string name="change_wallpaper_label">"Change Wallpaper"</string>

    <!-- Bookmarks Panel -->


    <string name="save_button">"Save"</string>

    <string name="name_form_tag">"Name"</string>

    <string name="url_form_tag">"URL"</string>

    <string name="apply_changes">"Commit changes"</string>

    <string name="Home">"Home"</string>

    <string name="launcherAppState_error">"LauncherAppState inited before app context set."</string>

    <string name="parent_callback_error">"Parent activity must implement Callbacks."</string>

    <string name="tab_aplicaciones">"Apps"</string>

    <string name="tab_bookmarks">"Bookmarks"</string>

    <string name="tab_settings">"Settings"</string>
    <string name="arrange_list_mensajeInicial">Select an item</string>
    <string name="tag_sharedPreferences_locale">LOC</string>
    <string name="arrange_list_mensajeFinal">Select new position</string>
    <string name="bookmark_button_delete">Delete</string>
    <string name="bookmark_button_go">Go</string>
    <string name="url_not_valid_error">Does not appear to be a valid URL</string>

</resources>