
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ethernet_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/clock_ethernet_icon_description" />
                <ImageView
                    android:id="@+id/wifi_icon"
                    android:layout_width="24dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/clock_wifi_icon_description"
                    android:src="@drawable/stat_sys_tether_wifi_0"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clock_default_date"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/clock_date_text_size"
                    android:layout_below="@+id/ethernet_icon"
                    android:layout_alignEnd="@+id/clock"
                    android:paddingRight="4dp" />
                <TextView
                    android:id="@+id/clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/clock_default_time"
                    android:textColor="@color/blanco"
                    android:textSize="@dimen/clock_time_text_size"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="25dp" />

                </RelativeLayout>
