<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lol"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grisOSCURO"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/menuBookmarkLblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/name_form_tag"
        android:textSize="@dimen/normal_text_size" />

    <EditText
        android:id="@+id/menuBookmarkTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/menuBookmarkTxtUri"
        android:nextFocusUp="@+id/tab2"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/blanco"/>

    <TextView
        android:id="@+id/menuBookmarklblUri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/form_section_padding"
        android:focusable="false"
        android:text="@string/url_form_tag"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/menuBookmarkTxtUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:nextFocusDown="@+id/menuBookmarkBtn"
        android:nextFocusUp="@+id/menuBookmarkTxtName"
        android:text="http://"
        android:textSize="22sp"
        android:textColor="@color/blanco"/>

    <Button
        android:id="@+id/menuBookmarkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/form_section_padding"
        android:layout_gravity="end"
        android:nextFocusDown="@+id/listViewLinks"
        android:text="@string/save_button" />

    <ListView
        android:id="@+id/listViewLinks"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:nextFocusDown="@+id/menuBookmarkList"
        android:nextFocusRight="@+id/listViewLinks" />


</LinearLayout>